force-app/main/default/objects/SM_Omniscript_Parameters__mdt/SM_Omniscript_Parameters__mdt.object-meta.xml
<CustomObject>
    <description>SMILE: custom metadata pour externaliser les paramètres statiques des Omniscripts.</description>
    <label>SM_Omniscript_Parameter</label>
    <pluralLabel>SM_Omniscript_Parameters</pluralLabel>
</CustomObject>