force-app/main/default/objects/SM_Omniscript_Parameters__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>une description de l&apos;attribut.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>