force-app/main/default/objects/SM_Omniscript_Parameters__mdt/fields/Parcours__c.field-meta.xml
<CustomField>
    <fullName>Parcours__c</fullName>
    <description>le nom du parcours Vlocity.</description>
    <label>Parcours</label>
    <length>100</length>
    <type>Text</type>
</CustomField>