force-app/main/default/objects/SM_Omniscript_Parameters__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>La valeur de l&apos;attribut</description>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>